# geofindr

./: .gitignore  README.md  captain-definition  index.js  package-lock.json  package.json
client/: app.js  index.html  style.css
server/: Cargo.toml
server/src/: main.rs
