[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = "0.11.14"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.152"
uuid = {version = "1.2.2", features = ["v4"]}