[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_session = "0.3.0"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
rand = "0.7"